<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <!--Company name. [CHAR LIMIT=NONE] -->
    <string name="company_name">MY Coffee House</string>
    <!--Company slogan. [CHAR LIMIT=NONE] -->
    <string name="company_slogan">MY Coffee. When perfection is desired.</string>
    <!-- Type header. [CHAR LIMIT=NONE] -->
    <string name="type">Type</string>
    <!-- Americano button text. [CHAR LIMIT=NONE] -->
    <string name="americano_type">Americano</string>
    <!-- Latte button text. [CHAR LIMIT=NONE] -->
    <string name="latte_type">Latte</string>
    <!-- Mocha button text. [CHAR LIMIT=NONE] -->
    <string name="mocha_type">Mocha</string>
    <!-- Name for order summary. [CHAR LIMIT=NONE] -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Mary">%1$s</xliff:g></string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>
    <!-- Whipped cream text for the list of toppings [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>
    <!-- Chocolate text for the list of toppings [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>
    <!-- Quantity text [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>
    <!-- Order text [CHAR LIMIT=20] -->
    <string name="order">Order</string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you"> Thank you!</string>
    <!-- Add whipped cream message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="add_whipped_cream">Add whipped cream?\u0020</string>
    <!-- Add chocolate message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="add_chocolate">Add chocolate?\u0020</string>
    <!-- Order quantity message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="order_quantity">Quantity:\u0020</string>
    <!-- Order total message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="order_total">Total: $</string>
    <!-- Quantity, number of coffees. [CHAR LIMIT=NONE] -->
    <string name="quantity_text">2</string>
    <!-- Hint text for EditText [CHAR LIMIT=NONE] -->
    <string name="hint_text">Name</string>
    <!-- Text for decrement button. [CHAR LIMIT=NONE] -->
    <string name="decrement">-</string>
    <!-- Text for increment button. [CHAR LIMIT=NONE] -->
    <string name="increment">+</string>
    <!-- Start quantity text [CHAR LIMIT=NONE] -->
    <string name="start_quantity">2</string>
    <!-- Americano selected for order summary. [CHAR LIMIT=NONE] -->
    <string name="americano_selected">Type: Amecricano</string>
    <!-- Latte selected for order summary. [CHAR LIMIT=NONE] -->
    <string name="latte_selected">Type: Latte</string>
    <!-- Mocha selected for order summary. [CHAR LIMIT=NONE] -->
    <string name="mocha_selected">Type: Mocha</string>
    <string name="over_100_coffees">You cannot have more than 100 coffees</string>
    <string name="under_1_coffee">You cannont have less than 1 coffee</string>
    <string name="no_name">Please enter a name</string>
    <string name="no_type">Please select a type</string>
    <string name="email_subject">Just Java Order for\u0020</string>
    <string name="ameri_cost_toast">$3 per cup</string>
    <string name="latte_cost_toast">$6 per cup</string>
    <string name="mocha_cost_toast">$7 per cup</string>
    <string name="cream_cost_toast">Add $1 per cup</string>
    <string name="choco_cost_toast">Add $2 per cup</string>
</resources>


