<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--Company name-->
        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xLarge"
            android:paddingHorizontal="@dimen/large"
            android:text="@string/company_name" />

        <!--Customer name-->
        <EditText
            android:id="@+id/name_field"
            style="@style/EditTextMain"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:hint="@string/hint_text"
            android:inputType="textCapWords" />

        <!--Type heading-->
        <TextView
            android:id="@+id/type_text_view"
            style="@style/TextViewLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:text="@string/type"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Americano type-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/americano_button_view"
                style="@style/ButtonSelection"
                android:layout_width="@dimen/type_button_width"
                android:layout_height="@dimen/type_button_height"
                android:layout_weight="1"
                android:onClick="americano"
                android:text="@string/americano_type" />

            <!--Latte type-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/latte_button_view"
                style="@style/ButtonSelection"
                android:layout_width="@dimen/type_button_width"
                android:layout_height="@dimen/type_button_height"
                android:layout_marginHorizontal="@dimen/xsmall"
                android:layout_weight="1"
                android:onClick="latte"
                android:text="@string/latte_type" />

            <!--Mocha type-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mocha_button_view"
                style="@style/ButtonSelection"
                android:layout_width="@dimen/type_button_width"
                android:layout_height="@dimen/type_button_height"
                android:layout_weight="1"
                android:onClick="mocha"
                android:text="@string/mocha_type" />

        </LinearLayout>

        <!--Toppings heading-->
        <TextView
            style="@style/TextViewLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <!--Whipped cream topping-->
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            style="@style/CheckBoxMain"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:onClick="addWhippedCream"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/whipped_cream" />

        <!--Chocolate topping-->
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            style="@style/CheckBoxMain"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:onClick="addChocolate"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/chocolate" />

        <!--Quantity heading-->
        <TextView
            style="@style/TextViewLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--Decrement button-->
            <Button
                style="@style/ButtonSelection"
                android:layout_width="@dimen/square_button"
                android:layout_height="@dimen/square_button"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <!--Quantity display-->
            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/TextViewLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/medium"
                android:text="@string/start_quantity" />

            <!--Increment button-->
            <Button
                style="@style/ButtonSelection"
                android:layout_width="@dimen/square_button"
                android:layout_height="@dimen/square_button"
                android:onClick="increment"
                android:text="@string/increment" />

        </LinearLayout>

        <!--Submit order button-->
        <Button
            style="@style/ButtonAlt"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/large"
            android:onClick="submitOrder"
            android:text="@string/order" />

        <!--Company slogan-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large"
            android:text="@string/company_slogan"
            android:textSize="@dimen/small_text" />

    </LinearLayout>

</ScrollView>


